Fixed some responsive issues
#2 Fixed some of the responsive issues :
Added a skills tab on xs and sd
Left to do : Fix the labels in the formation section (overlapping and
ugly with title of formations)

--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -19,6 +19,12 @@ a:hover, a:active, a:focus{
     margin: 0 0 20px 20px;
 }
 
+.photo_sd{
+    height: auto;
+    width: 200px;
+    margin: auto;
+}
+
 .work img, .school img{
     margin : 0 20px 0 0;
     width:100px; 
